--- a/src/resources/postcss/views/skeleton/latest-past/_event.pcss
+++ b/src/resources/postcss/views/skeleton/latest-past/_event.pcss
@@ -136,7 +136,7 @@
 		margin-left: var(--spacer-0);
 	}
 
-	.tribe-events-calendar-latest-past__event-venue {
+	.tribe-events-calendar-latest-past__event-venue-wrapper {
 		margin-bottom: var(--spacer-1);
 
 		.tribe-common--breakpoint-medium& {
