--- a/src/resources/postcss/views/skeleton/list/_event.pcss
+++ b/src/resources/postcss/views/skeleton/list/_event.pcss
@@ -143,7 +143,7 @@
 		margin-left: var(--spacer-0);
 	}
 
-	.tribe-events-calendar-list__event-venue {
+	.tribe-events-calendar-list__event-venue-wrapper {
 		margin-bottom: var(--spacer-1);
 
 		.tribe-common--breakpoint-medium& {
